# clarif-ai

./: .gitattributes  .gitignore  ClarifAI.mp4.REMOVED.git-id  README.md  docker-compose.yml
backend/: .env  Dockerfile  fr-FR.zip.REMOVED.git-id  pyproject.toml
backend/clarifai/: __init__.py  main.py  utils.py
backend/data/: videos.json
backend/data/learning_1/: audio.wav.REMOVED.git-id  transcript.txt
backend/data/learning_2/: audio.wav.REMOVED.git-id  transcript.txt
backend/data/learning_3/: transcript.txt
backend/data/learning_4/: audio.wav.REMOVED.git-id  transcript.txt
backend/static/html/: default.html
backend/tests/bruno-requests/: bruno.json  summarize.bru  transcribe.bru
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Chatbot.css  Chatbot.jsx  Dashboard.css  Dashboard.jsx  Help.css  Help.jsx  Learnings.css  Learnings.jsx  Sidebar.jsx  Summary.jsx  Tools.jsx  Transcript.css  Transcript.jsx  Video.css  Video.jsx  main.jsx
